Se agrego seccion de footer

--- a/index.html
+++ b/index.html
@@ -170,15 +170,34 @@
             <p>Eduardo Claros</p>
         </section>
     </div>
-    <footer>
-        <nav class="navegacion">
-            <a href="#">Nosotros</a>
-            <a href="#">Anuncios</a>
-            <a href="#">Blog</a>
-            <a href="#">Contacto</a>   
-        </nav>
-        <p>Todos los derechos reservados 2024 &copy;</p>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3>Sobre Nosotros</h3>
+                <p>Inmobiliaria Bienes Raices</p>
+                <p>Somos una empresa que se dedica a proveer soluciones en bienes raices.</p>
+            </div>
+            <div class="footer-column">
+                <h3>Enlaces Rápidos</h3>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Proyectos</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Contáctanos</h3>
+                <ul>
+                    <li><a href="tel:+57 3012583665">Teléfono: +57 3012583665</a></li>
+                    <li><a href="mailto:hiller.saavedra@hotmail.com">Email: hiller.saavedra@hotmail.com</a></li>
+                    <li><a href="#">Ubicación</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Inmobiliaria Bienes Raices | Todos los derechos reservados.</p>
+        </div>
     </footer>
-    
 </body>
 </html>
